--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <button class="btn-proximo" data-proximo="2"> Pernambuco </button>
 
 
-            <div class="passo ativo" id="passo-1">
+            <div class="passo" id="passo-1">
                 <p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma
                     cidade perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas
                     pistas para encontrar essa cidade e eu decidi segui-las!</p>
