--- a/index.html
+++ b/index.html
@@ -43,6 +43,26 @@
                 <button class="btn-proximo" data-proximo="10">Seguir pelo rio à direita</button>
         </div>
 
+        <div class="passo" id="passo-3">
+            <p>No topo do Pico da Tijuca, você encontra uma antiga inscrição apontando que a próxima pista está localizada no Amazonas.</p>
+            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
+    </div>
+
+    <div class="passo" id="passo-4">
+        <img src="img/cenario-passo4-voltar-casa.png" alt="imagem voltando para casa e desitindo da aventura">
+            <p>Você decide que a aventura é grande demais e volta para casa, mas sempre se pergunta o que teria encontrado.</p>
+    </div>
+
+    <div class="passo" id="passo-5">
+            <p>Nas igrejas de Olinda, você descobre um mapa antigo escondido atrás de um altar, apontando que a próxima pista está no Amazonas.</p>
+            <button class="btn-proximo" data-proximo="7">Viajar para o Amazonas</button>
+    </div>
+
+    <div class="passo" id="passo-6">
+            <p>Explorando as praias, você encontra uma caverna escondida, mas ela leva a um beco sem saída.</p>
+            <button class="btn-proximo" data-proximo="8">Voltar e explorar as igrejas</button>
+    </div>
+
         <div class="passo" id="passo-8">
                 <p>De volta às igrejas, você finalmente encontra o mapa antigo. Agora, para o Amazonas!</p>
                 <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
