--- a/index.html
+++ b/index.html
@@ -37,11 +37,6 @@
                 <button class="btn-proximo" data-proximo="6">Explorar as praias próximas</button>
             </div>
 
-            <div class="passo" id="passo-7">
-                <p>No Amazonas, a busca pela cidade perdida se intensifica. Você se depara com um rio bifurcado.</p>
-                <button class="btn-proximo" data-proximo="9">Seguir pelo rio à esquerda</button>
-                <button class="btn-proximo" data-proximo="10">Seguir pelo rio à direita</button>
-        </div>
 
         <div class="passo" id="passo-3">
             <p>No topo do Pico da Tijuca, você encontra uma antiga inscrição apontando que a próxima pista está localizada no Amazonas.</p>
@@ -63,6 +58,13 @@
             <button class="btn-proximo" data-proximo="8">Voltar e explorar as igrejas</button>
     </div>
 
+    
+    <div class="passo" id="passo-7">
+        <p>No Amazonas, a busca pela cidade perdida se intensifica. Você se depara com um rio bifurcado.</p>
+        <button class="btn-proximo" data-proximo="9">Seguir pelo rio à esquerda</button>
+        <button class="btn-proximo" data-proximo="10">Seguir pelo rio à direita</button>
+</div>
+
         <div class="passo" id="passo-8">
                 <p>De volta às igrejas, você finalmente encontra o mapa antigo. Agora, para o Amazonas!</p>
                 <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
@@ -79,6 +81,7 @@
         </div>
 
         <div class="passo" id="passo-11">
+            <img src="img/cenario-passo11-cidade-perdida.png" alt="imagem cenario passo 11">
                 <p>Dentro da cidade perdida, você descobre tesouros inimagináveis e decide se dedicar a estudar e preservar este lugar</p>
         </div>
 
